# salient-object-detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  task
client/: CMakeLists.txt  run_no_gui.cc  salient_object_detection.cc  test_segment.cc
client/salient_object_detectionW/: basic_image_operations.cc  basic_image_operations.h  basic_image_operations.ui  main.cc  process_multiple_page.cc  process_multiple_page.ui  process_single_page.cc  process_single_page.h  process_single_page.ui  startwindow.cc  startwindow.h  startwindow.ui
client/simple_gui/: mainwindow.cc  mainwindow.h  mainwindow.ui  process_multiple_page.cc  process_multiple_page.h  process_multiple_page.ui  process_single_page.cc  process_single_page.h  process_single_page.ui  startwindow.cc  startwindow.h  startwindow.ui
server/: CMakeLists.txt
server/basic/: YtDefault.h  YtFile.cpp  YtFile.h
server/src/basic/: basic_functions_demo.cc  basic_functions_demo.h  block.h  disjoint_set.h  file_linux.h  file_win.h  gaussian_blur.h  graph.h  image_operations.cc  image_operations.h  segment_graph.h  segment_image.cc  segment_image.h  yt_platform.h  ytplatform.h
server/src/cluster/: gaussian_mixture_models.cc  gaussian_mixture_models.h
server/src/saliency/: pre_process.cc  pre_process.h  saliency_cut.cc  saliency_cut.h  saliency_region_contrast.cc  saliency_region_contrast.h  some_definition.cc  some_definition.h
